--- a/workshop/values.env
+++ b/workshop/values.env
@@ -1,5 +1,4 @@
 # values.env
-# Copy this to values.env and adjust values as needed for your workshop
 
 # Kubernetes namespace
 NAMESPACE=idurar-demo
@@ -12,7 +11,7 @@ MONGO_ROOT_PASSWORD=ChangeMe123
 MONGO_DATABASE=idurar
 MONGO_STORAGE=5Gi
 
-# Docker images (point to your ECR/registry)
+# Docker images (point to ECR/registry)
 BACKEND_IMAGE=<AWS_ACCOUNT_ID>.dkr.ecr.ap-southeast-1.amazonaws.com/idurar-backend
 BACKEND_IMAGE_TAG=latest
 FRONTEND_IMAGE=<AWS_ACCOUNT_ID>.dkr.ecr.ap-southeast-1.amazonaws.com/idurar-frontend
@@ -31,5 +30,5 @@ DD_SERVICE=idurar-backend
 DD_VERSION=1.0.0
 DD_ENV=demo
 
-# Image pull secret (if your registry requires auth)
+# Image pull secret
 IMAGE_PULL_SECRET=ghcr-secret
