--- a/workshop/datakit.yaml
+++ b/workshop/datakit.yaml
@@ -22,9 +22,6 @@ rules:
 - apiGroups: ["batch"]
   resources: ["jobs", "cronjobs"]
   verbs: [ "get", "list", "watch"]
-- apiGroups: ["guance.com"]
-  resources: ["datakits"]
-  verbs: ["get","list"]
 - apiGroups: ["monitoring.coreos.com"]
   resources: ["podmonitors", "servicemonitors"]
   verbs: ["get", "list"]
@@ -33,46 +30,6 @@ rules:
   verbs: ["get", "list"]
 - nonResourceURLs: ["/metrics"]
   verbs: ["get"]
-
----
-
-apiVersion: apiextensions.k8s.io/v1
-kind: CustomResourceDefinition
-metadata:
-  name: datakits.guance.com
-spec:
-  group: guance.com
-  versions:
-    - name: v1beta1
-      served: true
-      storage: true
-      schema:
-        openAPIV3Schema:
-          type: object
-          properties:
-            spec:
-              type: object
-              properties:
-                instances:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      k8sNamespace:
-                        type: string
-                      k8sDeployment:
-                        type: string
-                      datakit/logs:
-                        type: string
-                      inputConf:
-                        type: string
-  scope: Namespaced
-  names:
-    plural: datakits
-    singular: datakit
-    kind: Datakit
-    shortNames:
-    - dk
 
 ---
 
@@ -93,16 +50,22 @@ spec:
   selector:
     app: daemonset-datakit
   ports:
-    - protocol: TCP
+    - name: svc-http-port
+      protocol: TCP # for HTTP apis and some collector(inputs) HTTP server, such as DDTrace
       port: 9529
-      name: port
-    - protocol: UDP
+      targetPort: http-port
+    - name: svc-statsd-port
+      protocol: UDP
       port: 8125
-      name: statsd
-    - name: profile
+      targetPort: statsd-port
+    - name: svc-otel-grpc-port
       protocol: TCP
-      port: 4040
-      targetPort: 4040
+      port: 4317
+      targetPort: otel-grpc-port
+    - name: svc-logfwd-port
+      protocol: TCP
+      port: 9533
+      targetPort: logfwd-port
 
 ---
 
@@ -163,19 +126,15 @@ spec:
         #  value: cluster_a_$(ENV_K8S_NODE_NAME)
 
         - name: ENV_DATAWAY
-          value: https://id1-openway.truewatch.com?token=tkn_1983d5xxxxx # Fill your real Dataway server and(or) workspace token
+          value: https://openway.truewatch.com?token=<YOUR-WORKSPACE-TOKEN> # Fill your real Dataway server and(or) workspace token
         - name: ENV_CLUSTER_NAME_K8S
-          value: k8s-demo
+          value: default
         - name: ENV_GLOBAL_HOST_TAGS
           value: host=__datakit_hostname,host_ip=__datakit_ip
-        - name: ENV_GLOBAL_ELECTION_TAGS
-          value: "" # Default not set
+        - name: ENV_GLOBAL_ELECTION_TAGS # Default not set
+          value: ""
         - name: ENV_DEFAULT_ENABLED_INPUTS
-          value: dk,cpu,disk,diskio,mem,swap,system,hostobject,net,host_processes,container,kubernetesprometheus,ebpf,ddtrace,profile,statsd
-        - name: ENV_INPUT_CONTAINER_ENABLE_POD_METRIC
-          value: "true"
-        - name: ENV_NAMESPACE
-          value: k8s-demo
+          value: statsd,dk,cpu,disk,diskio,mem,swap,system,hostobject,net,host_processes,container,kubernetesprometheus
         - name: ENV_ENABLE_ELECTION
           value: enable
         - name: ENV_HTTP_LISTEN
@@ -210,21 +169,25 @@ spec:
         #  value: OSS_BUCKET_HOST=host,OSS_ACCESS_KEY_ID=key_id,OSS_ACCESS_KEY_SECRET=key_secret,OSS_BUCKET_NAME=name
         #- name: ENV_REMOTE_JOB_INTERVAL
         #  value: 10s
-        image: pubrepo.guance.com/datakit/datakit:1.69.1
+        image: pubrepo.truewatch.com/truewatch/datakit:1.78.0
         imagePullPolicy: IfNotPresent
         name: datakit
         ports:
         - containerPort: 9529
           hostPort: 9529
-          name: port
+          name: http-port
           protocol: TCP
         - containerPort: 8125
           hostPort: 8125
-          name: statsd
+          name: statsd-port
           protocol: UDP
-        - name: profile
-          containerPort: 4040
-          hostPort: 4040
+        - containerPort: 4317
+          hostPort: 4317
+          name: otel-grpc-port
+          protocol: TCP
+        - containerPort: 9533
+          hostPort: 9533
+          name: logfwd-port
           protocol: TCP
         resources:
           requests:
@@ -249,10 +212,6 @@ spec:
           name: debugfs
         - mountPath: /var/lib/containerd/container_logs
           name: container-logs
-        - name: datakit-conf
-          mountPath: /usr/local/datakit/conf.d/profile.conf
-          subPath: profile.conf
-          readOnly: true
         # # ---iploc-start
         #- mountPath: /usr/local/datakit/data/ipdb/iploc/
         #  name: datakit-ipdb
@@ -280,7 +239,7 @@ spec:
       #    command:
       #      - bash
       #      - -c
-      #    image: pubrepo.guance.com/datakit/iploc:1.0
+      #    image: pubrepo.truewatch.com/truewatch/iploc:1.0
       #    imagePullPolicy: IfNotPresent
       #    name: init-volume
       #    resources: {}
@@ -296,9 +255,9 @@ spec:
       tolerations:
       - operator: Exists
       volumes:
-      - name: datakit-conf
-        configMap:
+      - configMap:
           name: datakit-conf
+        name: datakit-conf
       # - name: hellopythond
       #   configMap:
       #     name: python-scripts
@@ -312,7 +271,7 @@ spec:
           path: /sys/kernel/debug
         name: debugfs
       - hostPath:
-          path: /var/lib/datakit_cache
+          path: /root/datakit_cache
         name: cache
       - hostPath:
           path: /var/lib/containerd/container_logs
@@ -350,14 +309,6 @@ data:
     #     cmd = "python3" # required. python3 is recommended.
     #     # Python scripts relative path
     #     dirs = ["hellopythond"]
-    profile.conf: |-
-      [[inputs.profile.pyroscope]]
-        # listen url
-        url = "0.0.0.0:4040"
-        addr = "http://${DD_TRACE_AGENT_HOSTNAME}:${DD_TRACE_AGENT_PORT}"
-        service = "idurar"
-        env = "dev"
-        version = "0.0.0"
 ---
 
 # apiVersion: v1
@@ -392,3 +343,4 @@ data:
 #               return self.report(in_data)
 
 ---
+
