--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "idurar-erp-crm",
+  "name": "idurar-backend",
   "version": "4.1.0",
   "engines": {
     "npm": "10.2.4",
@@ -16,12 +16,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.509.0",
     "@pyroscope/nodejs": "^0.4.5",
-    "dd-trace": "^5.11.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "currency.js": "2.0.4",
+    "dd-trace": "^5.11.0",
     "dotenv": "16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
@@ -41,7 +41,8 @@
     "pug": "^3.0.2",
     "resend": "^2.0.0",
     "shortid": "^2.2.16",
-    "transliteration": "^2.3.5"
+    "transliteration": "^2.3.5",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "nodemon": "3.0.1"
